RESOLVED FIXED179427
Gigacage.cpp:44:46: warning: ‘*’ in boolean context, suggest ‘&&’ instead [-Wint-in-bool-context]
https://bugs.webkit.org/show_bug.cgi?id=179427
Summary Gigacage.cpp:44:46: warning: ‘*’ in boolean context, suggest ‘&&’ instead [-W...
Michael Catanzaro
Reported 2017-11-08 09:26:33 PST
r224555 "We should PROT_NONE the Gigacage runway so OOB accesses crash" introduced this GCC warning: [15/2288] Building CXX object Source/b...les/bmalloc.dir/bmalloc/Gigacage.cpp.o ../../Source/bmalloc/bmalloc/Gigacage.cpp: In lambda function: ../../Source/bmalloc/bmalloc/Gigacage.cpp:44:46: warning: ‘*’ in boolean context, suggest ‘&&’ instead [-Wint-in-bool-context] #define GIGACAGE_RUNWAY (16llu * 1024 * 1024 * 1024) ~~~~~~~~~~~~~~~~~~~~~^~~~~~~ ../../Source/bmalloc/bmalloc/Gigacage.cpp:159:17: note: in expansion of macro ‘GIGACAGE_RUNWAY’ if (GIGACAGE_RUNWAY) { ^~~~~~~~~~~~~~~
Attachments
Patch (1.79 KB, patch)
2017-11-08 09:27 PST, Michael Catanzaro
no flags
Patch (1.79 KB, patch)
2017-11-08 09:28 PST, Michael Catanzaro
no flags
Patch (1.40 KB, patch)
2017-11-08 10:57 PST, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2017-11-08 09:27:59 PST
Michael Catanzaro
Comment 2 2017-11-08 09:28:18 PST
Saam Barati
Comment 3 2017-11-08 10:31:59 PST
Comment on attachment 326333 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=326333&action=review > Source/bmalloc/bmalloc/Gigacage.cpp:159 > +#if !BCPU(ARM64) Not a fan of this. Can we just make it if (GIGACAGE_RUNWAY > 0)?
Saam Barati
Comment 4 2017-11-08 10:32:37 PST
(In reply to Saam Barati from comment #3) > Comment on attachment 326333 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=326333&action=review > > > Source/bmalloc/bmalloc/Gigacage.cpp:159 > > +#if !BCPU(ARM64) > > Not a fan of this. Can we just make it > if (GIGACAGE_RUNWAY > 0)? To elaborate, this code shouldn't worry about which CPU it's on. If we decide to define GIGACAGE_RUNWAY for ARM64, we now need to change two lines of code instead of one.
Michael Catanzaro
Comment 5 2017-11-08 10:56:38 PST
(In reply to Saam Barati from comment #3) > Not a fan of this. Can we just make it > if (GIGACAGE_RUNWAY > 0)? D'oh, that's way better.
Michael Catanzaro
Comment 6 2017-11-08 10:57:02 PST
WebKit Commit Bot
Comment 7 2017-11-08 11:30:39 PST
Comment on attachment 326339 [details] Patch Clearing flags on attachment: 326339 Committed r224588: <https://trac.webkit.org/changeset/224588>
WebKit Commit Bot
Comment 8 2017-11-08 11:30:41 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9 2017-11-15 09:41:42 PST
Note You need to log in before you can comment on or make changes to this bug.