Gigacage.cpp:44:46: warning: ‘*’ in boolean context, suggest ‘&&’ instead [-Wint-in-bool-context] https://bugs.webkit.org/show_bug.cgi?id=179427

Reviewed by Saam Barati.

Tweak the conditional to suppress the warning.

* bmalloc/Gigacage.cpp:
(Gigacage::ensureGigacage):


Canonical link: https://commits.webkit.org/195488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224588 268f45cc-cd09-0410-ab3c-d52691b4dbfc